add all sections html

--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
 
       <!-- experience section -->
       <section class="black-background">
-        <section class="black-background-container">
-          <h1 class="title white center-title">
+        <section class="black-background-container white">
+          <h1 class="title center-title">
             my <span class="title-extra-bold">experience</span>
           </h1>
-          <div class="flex-wrapper experience-flex-wrapper white">
+          <div class="flex-wrapper experience-flex-wrapper">
             <div class="experience-card">
               <div class="experience-info-flex-wrapper">
                 <img
@@ -220,11 +220,12 @@
             </h1>
             <div>
               <p class="paragraph">
-                I'm a passionate, self-proclaimed designer who specializes in full
-                stack development (React.js & Node.js). I am very enthusiastic
-                about bringing the technical and visual aspects of digital
-                products to life. User experience, pixel perfect design, and
-                writing clear, readable, highly performant code matters to me.
+                I'm a passionate, self-proclaimed designer who specializes in
+                full stack development (React.js & Node.js). I am very
+                enthusiastic about bringing the technical and visual aspects of
+                digital products to life. User experience, pixel perfect design,
+                and writing clear, readable, highly performant code matters to
+                me.
               </p>
               <p class="paragraph">
                 I began my journey as a web developer in 2015, and since then,
@@ -249,22 +250,189 @@
 
       <!-- my projects section -->
       <section class="black-background">
-        <section class="black-background-container">
-          <h1 class="title white">my projects</h1>
+        <section class="black-background-container white">
+          <h1 class="title center-title">
+            my <span class="title-extra-bold">projects</span>
+          </h1>
+          <div>
+            <div>
+              <img src="static/image771.svg" alt="" />
+              <div>
+                <h1>01</h1>
+                <h2>portfolio website</h2>
+                <p>
+                  I'm Flora Sheen Lorem Ipsum is simply dummy text of the
+                  printing and typesetting industry. Lorem Ipsum has been the
+                  industry's standard dummy text ever since the 1500s, when an
+                  unknown printer took a galley of type and scrambled it to
+                  specimen book.
+                </p>
+                <a href=""><img src="static/ReadMore.svg" alt="" /></a>
+              </div>
+            </div>
+
+            <div>
+              <img src="static/image770.svg" alt="" />
+              <div>
+                <h1>02</h1>
+                <h2>electronic document signing application</h2>
+                <p>
+                  I'm Flora Sheen Lorem Ipsum is simply dummy text of the
+                  printing and typesetting industry. Lorem Ipsum has been the
+                  industry's standard dummy text ever since the 1500s, when an
+                  unknown printer took a galley of type and scrambled it to
+                  specimen book. I'm Flora Sheen Lorem Ipsum is simply dummy
+                  text of the printing and typesetting industry. Lorem Ipsum has
+                  been the industry's standard dummy text ever since the 1500s,
+                  when an unknown printer took a galley of type and scrambled it
+                  to specimen book.
+                </p>
+                <a href=""><img src="static/ReadMore.svg" alt="" /></a>
+              </div>
+            </div>
+
+            <div>
+              <img src="static/image770-2.svg" alt="" />
+              <div>
+                <h1>03</h1>
+                <h2>weather application</h2>
+                <p>
+                  I'm Flora Sheen Lorem Ipsum is simply dummy text of the
+                  printing and typesetting industry. Lorem Ipsum has been the
+                  industry's standard dummy text ever since the 1500s, when an
+                  unknown printer took a galley of type and scrambled it to
+                  specimen book.
+                </p>
+                <a href=""><img src="static/ReadMore.svg" alt="" /></a>
+              </div>
+            </div>
+          </div>
         </section>
       </section>
 
       <!-- my testimonial section-->
       <section class="container black-container-before">
-        <h1 class="title">my testimonial</h1>
+        <h1 class="title center-title">
+          my <span class="title-extra-bold">testimonial</span>
+        </h1>
+        <div>
+          <div>
+            <div>
+              <img src="static/Ellipse2664.svg" alt="" />
+              <img src="static/Frame17-2.svg" alt="" />
+            </div>
+            <p>
+              I recently had to jump on 10+ different calls across eight
+              different countries to find the right owner.
+            </p>
+            <hr />
+            <h5>Evren Shah</h5>
+            <h6>Designer</h6>
+          </div>
+
+          <div>
+            <div>
+              <img src="static/Ellipse2664-2.svg" alt="" />
+              <img src="static/Frame17-2.svg" alt="" />
+            </div>
+            <p>
+              I recently had to jump on 10+ different calls across eight
+              different countries to find the right owner.
+            </p>
+            <hr />
+            <h5>Flora sheen</h5>
+            <h6>Designer</h6>
+          </div>
+
+          <div>
+            <div>
+              <img src="static/Ellipse2664.svg" alt="" />
+              <img src="static/Frame17-2.svg" alt="" />
+            </div>
+            <p>
+              I recently had to jump on 10+ different calls across eight
+              different countries to find the right owner.
+            </p>
+            <hr />
+            <h5>Evren Shah</h5>
+            <h6>Designer</h6>
+          </div>
+        </div>
       </section>
 
       <!-- contact section -->
       <section class="container">
-        <h1 class="title">lets talk for smth special</h1>
+        <div>
+          <div>
+            <input type="text" />
+            <input type="text" />
+            <input type="text" />
+            <input type="text" />
+            <div>
+              <button>Get In Touch</button>
+
+              <ul class="contact-button-flex-wrapper">
+                <li>
+                  <button class="link-button">
+                    <img
+                      class="button-icon"
+                      src="static/icons8-telegram.svg"
+                      alt=""
+                    />
+                  </button>
+                </li>
+                <li>
+                  <button class="link-button">
+                    <img
+                      class="button-icon"
+                      src="static/icons8-github.svg"
+                      alt=""
+                    />
+                  </button>
+                </li>
+                <li>
+                  <button class="link-button">
+                    <img
+                      class="button-icon"
+                      src="static/icons8-vk.svg"
+                      alt=""
+                    />
+                  </button>
+                </li>
+                <li>
+                  <button class="link-button">
+                    <img
+                      class="button-icon"
+                      src="static/icons8-instagram.svg"
+                      alt=""
+                    />
+                  </button>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div>
+            <h1 class="title">lets talk for smth special</h1>
+            <p>
+              I seek to push the limits of creativity to create high-engaging,
+              user-friendly, and memorable interactive experiences.
+            </p>
+            <h3>Youremail@gmail.com<br />1234567890</h3>
+          </div>
+        </div>
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <section class="footer-black-background">
+        <div class="footer-container white">
+          <div class="flex-wrapper">
+            <a href=""><img src="static/Frame16.svg" alt="" /></a>
+            <p>@ 2019-2023 Personal<br>Made In Figma</p>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
