my projects section done

--- a/index.html
+++ b/index.html
@@ -250,61 +250,56 @@
 
       <!-- my projects section -->
       <section class="black-background">
-        <section class="black-background-container white">
+        <section
+          class="black-background-container white my-projects-flex-wrapper"
+        >
           <h1 class="title center-title">
             my <span class="title-extra-bold">projects</span>
           </h1>
-          <div>
-            <div>
-              <img src="static/image771.svg" alt="" />
-              <div>
-                <h1>01</h1>
-                <h2>portfolio website</h2>
-                <p>
-                  I'm Flora Sheen Lorem Ipsum is simply dummy text of the
-                  printing and typesetting industry. Lorem Ipsum has been the
-                  industry's standard dummy text ever since the 1500s, when an
-                  unknown printer took a galley of type and scrambled it to
-                  specimen book.
-                </p>
-                <a href=""><img src="static/ReadMore.svg" alt="" /></a>
-              </div>
-            </div>
 
-            <div>
-              <img src="static/image770.svg" alt="" />
-              <div>
-                <h1>02</h1>
-                <h2>electronic document signing application</h2>
-                <p>
-                  I'm Flora Sheen Lorem Ipsum is simply dummy text of the
-                  printing and typesetting industry. Lorem Ipsum has been the
-                  industry's standard dummy text ever since the 1500s, when an
-                  unknown printer took a galley of type and scrambled it to
-                  specimen book. I'm Flora Sheen Lorem Ipsum is simply dummy
-                  text of the printing and typesetting industry. Lorem Ipsum has
-                  been the industry's standard dummy text ever since the 1500s,
-                  when an unknown printer took a galley of type and scrambled it
-                  to specimen book.
-                </p>
-                <a href=""><img src="static/ReadMore.svg" alt="" /></a>
-              </div>
+          <div class="flex-wrapper">
+            <img src="static/image771.svg" alt="" />
+            <div class="my-projects-info-flex-wrapper">
+              <h1 class="title title-extra-bold">01</h1>
+              <h2>portfolio website</h2>
+              <p class="paragraph">
+                I'm Flora Sheen Lorem Ipsum is simply dummy text of the printing
+                and typesetting industry. Lorem Ipsum has been the industry's
+                standard dummy text ever since the 1500s, when an unknown
+                printer took a galley of type and scrambled it to specimen book.
+              </p>
+              <a href=""><img src="static/ReadMore.svg" alt="" /></a>
             </div>
+          </div>
 
-            <div>
-              <img src="static/image770-2.svg" alt="" />
-              <div>
-                <h1>03</h1>
-                <h2>weather application</h2>
-                <p>
-                  I'm Flora Sheen Lorem Ipsum is simply dummy text of the
-                  printing and typesetting industry. Lorem Ipsum has been the
-                  industry's standard dummy text ever since the 1500s, when an
-                  unknown printer took a galley of type and scrambled it to
-                  specimen book.
-                </p>
-                <a href=""><img src="static/ReadMore.svg" alt="" /></a>
-              </div>
+          <div class="flex-wrapper reverse">
+            <img src="static/image770.svg" alt="" />
+            <div class="my-projects-info-flex-wrapper">
+              <h1 class="title title-extra-bold">02</h1>
+              <h2>electronic document signing application</h2>
+              <p class="paragraph">
+                I'm Flora Sheen Lorem Ipsum is simply dummy text of the printing
+                and typesetting industry. Lorem Ipsum has been the industry's
+                standard dummy text ever since the 1500s, when an unknown
+                printer took a galley of type and scrambled it to specimen book.
+                I'm Flora Sheen Lorem Ipsum is simply dummy text of the printing
+              </p>
+              <a href=""><img src="static/ReadMore.svg" alt="" /></a>
+            </div>
+          </div>
+
+          <div class="flex-wrapper">
+            <img src="static/image770-2.svg" alt="" />
+            <div class="my-projects-info-flex-wrapper">
+              <h1 class="title title-extra-bold">03</h1>
+              <h2>weather application</h2>
+              <p class="paragraph">
+                I'm Flora Sheen Lorem Ipsum is simply dummy text of the printing
+                and typesetting industry. Lorem Ipsum has been the industry's
+                standard dummy text ever since the 1500s, when an unknown
+                printer took a galley of type and scrambled it to specimen book.
+              </p>
+              <a href=""><img src="static/ReadMore.svg" alt="" /></a>
             </div>
           </div>
         </section>
@@ -429,7 +424,7 @@
         <div class="footer-container white">
           <div class="flex-wrapper">
             <a href=""><img src="static/Frame16.svg" alt="" /></a>
-            <p>@ 2019-2023 Personal<br>Made In Figma</p>
+            <p>@ 2019-2023 Personal<br />Made In Figma</p>
           </div>
         </div>
       </section>
