my testimonial section done

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </section>
 
       <!-- skills section -->
-      <section class="container black-container-next">
+      <section class="container black-container-next gap-flex-wrapper">
         <h1 class="title center-title">
           my <span class="title-extra-bold">skills</span>
         </h1>
@@ -150,7 +150,7 @@
 
       <!-- experience section -->
       <section class="black-background">
-        <section class="black-background-container white">
+        <section class="black-background-container white gap-flex-wrapper">
           <h1 class="title center-title">
             my <span class="title-extra-bold">experience</span>
           </h1>
@@ -214,7 +214,7 @@
       <section class="container black-container-before black-container-next">
         <div class="flex-wrapper">
           <img src="static/Group 1000015859.svg" alt="" />
-          <div class="about-me-info-flex-wrapper">
+          <div class="about-me-info gap-flex-wrapper">
             <h1 class="title">
               about <span class="title-extra-bold">me</span>
             </h1>
@@ -251,7 +251,7 @@
       <!-- my projects section -->
       <section class="black-background">
         <section
-          class="black-background-container white my-projects-flex-wrapper"
+          class="black-background-container white my-projects gap-flex-wrapper"
         >
           <h1 class="title center-title">
             my <span class="title-extra-bold">projects</span>
@@ -306,29 +306,29 @@
       </section>
 
       <!-- my testimonial section-->
-      <section class="container black-container-before">
+      <section class="container black-container-before gap-flex-wrapper">
         <h1 class="title center-title">
           my <span class="title-extra-bold">testimonial</span>
         </h1>
-        <div>
-          <div>
+        <div class="flex-wrapper my-testimonial">
+          <div class="my-testimonial-card">
             <div>
-              <img src="static/Ellipse2664.svg" alt="" />
-              <img src="static/Frame17-2.svg" alt="" />
+              <img class="image-bottom" src="static/Ellipse2664.svg" alt="" />
+              <img class="image-top" src="static/Frame17-2.svg" alt="" />
             </div>
             <p>
               I recently had to jump on 10+ different calls across eight
               different countries to find the right owner.
             </p>
-            <hr />
+            <hr/>
             <h5>Evren Shah</h5>
             <h6>Designer</h6>
           </div>
 
-          <div>
+          <div class="my-testimonial-card">
             <div>
-              <img src="static/Ellipse2664-2.svg" alt="" />
-              <img src="static/Frame17-2.svg" alt="" />
+              <img class="image-bottom" src="static/Ellipse2664-2.svg" alt="" />
+              <img class="image-top" src="static/Frame17-2.svg" alt="" />
             </div>
             <p>
               I recently had to jump on 10+ different calls across eight
@@ -339,10 +339,10 @@
             <h6>Designer</h6>
           </div>
 
-          <div>
+          <div class="my-testimonial-card">
             <div>
-              <img src="static/Ellipse2664.svg" alt="" />
-              <img src="static/Frame17-2.svg" alt="" />
+              <img class="image-bottom" src="static/Ellipse2664.svg" alt="" />
+              <img class="image-top" src="static/Frame17-2.svg" alt="" />
             </div>
             <p>
               I recently had to jump on 10+ different calls across eight
