--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <a href=""><img src="static/Logo-2.svg" alt="" /></a>
           <nav>
             <ul>
-              <li><a href="">about me</a></li>
-              <li><a href="">skills</a></li>
-              <li><a href="">projects</a></li>
-              <li><a href="">contact me</a></li>
+              <li><a href="#about-me">about me</a></li>
+              <li><a href="#skills">skills</a></li>
+              <li><a href="#projects">projects</a></li>
+              <li><a href="#contact-me">contact me</a></li>
             </ul>
           </nav>
           <button class="header-resume-button">
@@ -62,34 +62,49 @@
             <ul class="main-button-flex-wrapper">
               <li>
                 <button class="link-button">
-                  <img
-                    class="button-icon"
-                    src="static/icons8-telegram.svg"
-                    alt=""
-                  />
+                  <a href="https://t.me/kuraginaek" target="_blank">
+                    <img
+                      class="button-icon"
+                      src="static/icons8-telegram.svg"
+                      alt=""
+                    />
+                  </a>
                 </button>
               </li>
               <li>
                 <button class="link-button">
-                  <img
-                    class="button-icon"
-                    src="static/icons8-github.svg"
-                    alt=""
-                  />
+                  <a href="https://github.com/kate-kura" target="_blank">
+                    <img
+                      class="button-icon"
+                      src="static/icons8-github.svg"
+                      alt=""
+                    />
+                  </a>
                 </button>
               </li>
               <li>
                 <button class="link-button">
-                  <img class="button-icon" src="static/icons8-vk.svg" alt="" />
+                  <a href="https://vk.com/nikitatypoi" target="_blank">
+                    <img
+                      class="button-icon"
+                      src="static/icons8-vk.svg"
+                      alt=""
+                    />
+                  </a>
                 </button>
               </li>
               <li>
                 <button class="link-button">
-                  <img
-                    class="button-icon"
-                    src="static/icons8-instagram.svg"
-                    alt=""
-                  />
+                  <a
+                    href="https://www.instagram.com/kuragina.ek"
+                    target="_blank"
+                  >
+                    <img
+                      class="button-icon"
+                      src="static/icons8-instagram.svg"
+                      alt=""
+                    />
+                  </a>
                 </button>
               </li>
             </ul>
@@ -100,7 +115,10 @@
       </section>
 
       <!-- skills section -->
-      <section class="container black-container-next gap-flex-wrapper">
+      <section
+        class="container black-container-next gap-flex-wrapper"
+        id="skills"
+      >
         <h1 class="title center-title">
           my <span class="title-extra-bold">skills</span>
         </h1>
@@ -211,7 +229,10 @@
       </section>
 
       <!-- about me section -->
-      <section class="container black-container-before black-container-next">
+      <section
+        class="container black-container-before black-container-next"
+        id="about-me"
+      >
         <div class="flex-wrapper">
           <img src="static/Group 1000015859.svg" alt="" />
           <div class="about-me-info gap-flex-wrapper">
@@ -249,7 +270,7 @@
       </section>
 
       <!-- my projects section -->
-      <section class="black-background">
+      <section class="black-background" id="projects">
         <section
           class="black-background-container white my-projects gap-flex-wrapper"
         >
@@ -268,7 +289,7 @@
                 standard dummy text ever since the 1500s, when an unknown
                 printer took a galley of type and scrambled it to specimen book.
               </p>
-              <a href=""><img src="static/ReadMore.svg" alt="" /></a>
+              <a href="https://github.com/kate-kura/PortfolioWebsite" target="_blank"><img src="static/ReadMore.svg" alt="" /></a>
             </div>
           </div>
 
@@ -284,7 +305,7 @@
                 printer took a galley of type and scrambled it to specimen book.
                 I'm Flora Sheen Lorem Ipsum is simply dummy text of the printing
               </p>
-              <a href=""><img src="static/ReadMore.svg" alt="" /></a>
+              <a href="https://github.com/kate-kura/Doc_sign_app" target="_blank"><img src="static/ReadMore.svg" alt="" /></a>
             </div>
           </div>
 
@@ -299,7 +320,7 @@
                 standard dummy text ever since the 1500s, when an unknown
                 printer took a galley of type and scrambled it to specimen book.
               </p>
-              <a href=""><img src="static/ReadMore.svg" alt="" /></a>
+              <a href="https://github.com/kate-kura/WeatherApp" target="_blank"><img src="static/ReadMore.svg" alt="" /></a>
             </div>
           </div>
         </section>
@@ -356,51 +377,68 @@
       </section>
 
       <!-- contact section -->
-      <section class="container contact">
+      <section class="container contact" id="contact-me">
         <div class="flex-wrapper">
           <div class="input-area contact-flex-wrapper">
             <input type="text" placeholder="Your name" />
-            <input type="text" placeholder="Email"/>
-            <input type="text" placeholder="Your website (If exists)"/>
-            <textarea class="large" rows="4" cols="50" wrap="soft" placeholder="How can I help?*"></textarea>
+            <input type="text" placeholder="Email" />
+            <input type="text" placeholder="Your website (If exists)" />
+            <textarea
+              class="large"
+              rows="4"
+              cols="50"
+              wrap="soft"
+              placeholder="How can I help?*"
+            ></textarea>
             <div class="contact-button-flex-wrapper">
               <button class="contact-button">Get In Touch</button>
 
               <ul class="contact-button-flex-wrapper">
                 <li>
                   <button class="link-button">
-                    <img
-                      class="button-icon"
-                      src="static/icons8-telegram.svg"
-                      alt=""
-                    />
+                    <a href="https://t.me/kuraginaek" target="_blank">
+                      <img
+                        class="button-icon"
+                        src="static/icons8-telegram.svg"
+                        alt=""
+                      />
+                    </a>
                   </button>
                 </li>
                 <li>
                   <button class="link-button">
-                    <img
-                      class="button-icon"
-                      src="static/icons8-github.svg"
-                      alt=""
-                    />
+                    <a href="https://github.com/kate-kura" target="_blank">
+                      <img
+                        class="button-icon"
+                        src="static/icons8-github.svg"
+                        alt=""
+                      />
+                    </a>
                   </button>
                 </li>
                 <li>
                   <button class="link-button">
-                    <img
-                      class="button-icon"
-                      src="static/icons8-vk.svg"
-                      alt=""
-                    />
+                    <a href="https://vk.com/nikitatypoi" target="_blank">
+                      <img
+                        class="button-icon"
+                        src="static/icons8-vk.svg"
+                        alt=""
+                      />
+                    </a>
                   </button>
                 </li>
                 <li>
                   <button class="link-button">
-                    <img
-                      class="button-icon"
-                      src="static/icons8-instagram.svg"
-                      alt=""
-                    />
+                    <a
+                      href="https://www.instagram.com/kuragina.ek"
+                      target="_blank"
+                    >
+                      <img
+                        class="button-icon"
+                        src="static/icons8-instagram.svg"
+                        alt=""
+                      />
+                    </a>
                   </button>
                 </li>
               </ul>
@@ -409,7 +447,11 @@
 
           <div class="text-area contact-flex-wrapper">
             <div>
-              <h1 class="title title-extra-bold">Let's <span class="title-outlined-extra-bold">talk</span> for<br>Something special</h1>
+              <h1 class="title title-extra-bold">
+                Let's
+                <span class="title-outlined-extra-bold">talk</span>
+                for<br />Something special
+              </h1>
               <p class="paragraph">
                 I seek to push the limits of creativity to create high-engaging,
                 user-friendly, and memorable interactive experiences.
@@ -430,7 +472,7 @@
           <div class="flex-wrapper">
             <a href=""><img src="static/Frame16.svg" alt="" /></a>
             <div class="footer-text">
-              <p>@ 2019-2023 Personal</p>
+              <p>@ 2019-2024 Personal</p>
               <p>Made In Figma</p>
             </div>
           </div>
